--- a/Admission.html
+++ b/Admission.html
@@ -97,16 +97,17 @@
           <label for="check-male">Male</label>
         </div>
         <div class="gender">
-          <input type="radio" id="check-female" name="gender">
+          <input type="radio" id="check-female" name="gender" checked>
           <label for="check-female">Female</label>
         </div>
       </div>
       <div class="gender">
-          <input type="radio" id="check-others" name="gender">
+          <input type="radio" id="check-others" name="gender" checked>
           <label for="check-others">Prefer not to say</label>
         </div>
       </div>
     </div>
+    
     
     <div class="col-12">
       <button type="submit" class="btn btn-primary">Submit</button>
