--- a/Admission.html
+++ b/Admission.html
@@ -93,16 +93,16 @@
       <h5>Gender</h5>
       <div class="gender-option">
         <div class="gender">
-          <input type="radio" id="check-male" name="gender" checked>
+          <input type="radio" id="check-male" name="gender" >
           <label for="check-male">Male</label>
         </div>
         <div class="gender">
-          <input type="radio" id="check-female" name="gender" checked>
+          <input type="radio" id="check-female" name="gender" >
           <label for="check-female">Female</label>
         </div>
       </div>
       <div class="gender">
-          <input type="radio" id="check-others" name="gender" checked>
+          <input type="radio" id="check-others" name="gender" >
           <label for="check-others">Prefer not to say</label>
         </div>
       </div>
