New files addition

--- a/Admission.html
+++ b/Admission.html
@@ -47,8 +47,19 @@
   </div>
   <div class="column">
     <div class="input-box">
+      <label>Passport</label>
+      <input class="input-textbox" type="file" name="Passport" placeholder="Upload your Passport Photo" required/>
+    </div>
+      <div class="input-box">
+      <label>Birth certificate</label>
+      <input class="input-textbox" type="file" name="Birth certificate" placeholder="Upload your Birth certificate" required/>
+      </div>
+    
+  </div>
+  <div class="column">
+    <div class="input-box">
     <label>Country</label>
-     <input class="input-textbox" type="text"  name="country" placeholder="Enter Country"/>
+     <input class="input-textbox" type="text"  name="count5ry" placeholder="Enter Country"/>
   </div>
   <div class="input-box">
     <label>City,State</label>
