--- a/Admission.html
+++ b/Admission.html
@@ -21,24 +21,24 @@
 <body>
   <section class="container">
   <header> Admission Form</header>
-  <form action="#" class="form">
+  <form action="form.php" method="post" class="form">
     <h5>Personal Information</h5>
       <hr>
     <div class="column">
     <div class="input-box">
       <label>First Name</label>
-       <input class="input-textbox" type="text" name="Fname" placeholder="Enter First name"/>
+       <input class="input-textbox" type="text" name="Fname" placeholder="Enter First name" required/>
     </div>
     <div class="input-box">
       <label>Last Name</label>
-       <input class="input-textbox" type="text" name="Lname" placeholder="Enter Last name"/>
+       <input class="input-textbox" type="text" name="Lname" placeholder="Enter Last name" required/>
     </div>
   </div>
 
   <div class="column">
     <div class="input-box">
     <label>Phone number</label>
-     <input class="input-textbox" type="text"  name="Phonenumber" placeholder="Enter Phone Number"/>
+     <input class="input-textbox" type="text"  name="Phonenumber" placeholder="Enter Phone Number" required/>
   </div>
   <div class="input-box">
     <label>Date Of Birth</label>
