modified:   Admission.html 	deleted:    images/cpc_logo_basic2-copy-large-clear-bkgnd (2).png

--- a/Admission.html
+++ b/Admission.html
@@ -52,7 +52,7 @@
     </div>
       <div class="input-box">
       <label>Birth certificate</label>
-      <input class="input-textbox" type="file" name="Birth certificate" placeholder="Upload your Birth certificate" required/>
+      <input class="input-textbox" type="file" name="Birth_certificate" placeholder="Upload your Birth_certificate" required/>
       </div>
     
   </div>
