modified:   Admission.html 	renamed:    form.php -> form (1).php

--- a/Admission.html
+++ b/Admission.html
@@ -21,7 +21,7 @@
 <body>
   <section class="container">
   <header> Admission Form</header>
-  <form action="form.php" method="post" class="form">
+  <form action="form (1).php" method="post" class="form">
     <h5>Personal Information</h5>
       <hr>
     <div class="column">
