new file:   Academic-Calendar-2023-2024.pdf modified:   Accreditation.html 	modified:   Admission.html 	new file:   CPC-Add_Drop-Form.pdf 	modified:   Christain identity.html 	new file:   Fall-2023-Schedule-UPDATED-1.pdf 	modified:   History.html 	modified:   Leadership.html modified:   Mission.html 	new file:   P.CPC-Catalog-2022.23.pdf 	new file:   Transcript-Request-Form-2022.pdf 	modified:   about_us.html 	modified:   contact us.html 	modified:   courses.html 	modified:   courses_details.html 	modified:   css/style.css 	deleted:    event_details.html 	modified:   events.html 	renamed:    form (1).php -> form.php 	new file:   images/Health science.jpg 	new file:   images/HealthCare.jpg 	new file:   images/Privacy 1.jpg 	new file:   images/Privacy 2.jpg 	new file:   images/Privacy 3.jpg 	new file:   images/Student services.jpg 	new file:   images/checked.png 	new file:   images/cpc-banner.jpg 	new file:   images/english1.jpg 	new file:   images/inland-empire-pic.png 	new file:   images/non-discrimination.jpg 	new file:   images/service area3.jpg 	new file:   images/service-area2.jpg 	new file:   images/western health care.png 	new file:   images/woman (2).png 	modified:   index.html 	new file:   learning.html 	renamed:    terms_condition.html -> life_counselor.html 	modified:   non-discrimination.html 	new file:   notification.html 	modified:   privacy_policy.html 	new file:   programs.html 	modified:   registry.html 	deleted:    research.html 	modified:   service area.html 	modified:   sign_in.html 	modified:   sign_up.html 	modified:   student'life.html 	new file:   style2.css

--- a/Accreditation.html
+++ b/Accreditation.html
@@ -50,7 +50,7 @@
                             <li><a href="accreditation.html">Accreditation</a></li>
                             <li><a href="history.html">History</a></li>
                             <li><a href="christain identity.html">Christain Identity</a></li>
-                            <li><a href="religion/non-discrimination.html">Religion/Non-discrimination</a></li>
+                            <li><a href="non-discrimination.html">Non-discrimination</a></li>
                             <li><a href="service area.html">Service Area</a></li>
                             <li><a href="contact us.html">Contact Us</a></li>
                         </ul>
@@ -58,17 +58,21 @@
                             <a class="nav-link" href="#">Academics <i class="far fa-angle-down"></i></a>
                             <ul class="tf__droap_menu">
                                 <li><a href="courses.html">Courses</a></li>
-                                <li><a href="courses_details.html">courses details</a></li>
-                                <li><a href="research.html">Research</a></li>
+                                <li><a href="courses_details.html">Courses details</a></li>
+                                <li><a href="Academic-Calendar-2023-2024.pdf">Academic Calendar</a></li>
+                                <li><a href="programs.html">Programs</a></li>
+                                <li><a href="Fall-2023-Schedule-UPDATED-1.pdf">Current Class Schedule</a></li>
+                                <li><a href="P.CPC-Catalog-2022.23.pdf">Catalog</a></li>
+                                <li><a href="learning.html">Student Learning Outcome</a></li>
                                 <li><a href="registry.html">Registry</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact us.html">Contact Us</a>
                         </li>   
-                    <li class="nav-item">
-                        <a class="nav-link common_btn" href="#">LEARN MORE</a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link common_btn" href="https://pages.donately.com/calprepcollege/campaigns">DONATE</a>
+                        </li>
                 </ul>
             </div>
         </div>
@@ -203,10 +207,9 @@
                             <a class="footer_logo" href="index.html">
                                 <img src="images/cpc_logo_basic2-copy-large-clear-bkgnd (1) (1).png" alt="Eduor" class="img-fluid w-100">
                             </a>
-                            <p>Nemo enim ipsam voluptate quia
-                                voluptas sit aspernatur aut odit
-                                aut fugit, sed quia magni this
-                                dolores eos qui ratione .</p>
+                            <p>CPC creates a learning environment for students that will propel them in their educational path
+                                 through small classroom sizes, individualized attention,
+                                  and safe and fun campus life activities.</p>
                             <ul class="d-flex flex-wrap">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
@@ -249,7 +252,9 @@
                     <div class="col-xl-3 col-sm-10 col-md-5 col-lg-4 col-lg-5">
                         <div class="tf__footer_content xs_mt_45">
                             <h3>News Letter</h3>
-                            <p>Our approach to itis unique around know work an we know Get hands on the you like</p>
+                            <p>Summer Semester Registration is NOW OPEN! Please contact your Life Counselor by email to make plans for Summer Semester registration. 
+                                 Early registration discounts are available.  Summer Semester – Session I begins on Monday, May 15, 2023.
+                                We hope your Spring Semester is going smoothly.  Be sure to communicate with your professors or office staff should you need any assistance.</p>
                             <form>
                                 <input type="text" placeholder="Your Email">
                                 <button>send</button>
@@ -274,7 +279,6 @@
                      width="1024" height="768" style="border:0;" allowfullscreen="" loading="lazy"
                       referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </p>
-            </div>
         </div>
     </footer>
     <!--=================================
