--- a/events.html
+++ b/events.html
@@ -50,27 +50,31 @@
                                 <li><a href="accreditation.html">Accreditation</a></li>
                                 <li><a href="history.html">History</a></li>
                                 <li><a href="christain identity.html">Christain Identity</a></li>
-                                <li><a href="religion/non-discrimination.html">Religion/Non-discrimination</a></li>
+                                <li><a href="non-discrimination.html">Non-discrimination</a></li>
                                 <li><a href="service area.html">Service Area</a></li>
                                 <li><a href="contact us.html">Contact Us</a></li>
                             </ul>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link active" href="#">Student'Life <i class="far fa-angle-down"></i></a>
-                        <ul class="tf__droap_menu">
-                            <li><a href="events.html">event</a></li>
-                            <li><a href="event_details.html">event details</a></li>
-                            <li><a href="sign_in.html">sign in</a></li>
-                            <li><a href="sign_up.html">sign up</a></li>
-                            <li><a href="terms_condition.html">terms and condition</a></li>
-                            <li><a href="privacy_policy.html">privacy policy</a></li>
-                        </ul>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Student'Life <i class="far fa-angle-down"></i></a>
+                            <ul class="tf__droap_menu">
+                                <li><a href="events.html">event</a></li>
+                                <li><a href="life_counselor.html">Life Counselor</a></li>
+                                <li><a href="sign_in.html">sign in</a></li>
+                                <li><a href="sign_up.html">sign up</a></li>
+                                <li><a href="terms_condition.html">terms and condition</a></li>
+                                <li><a href="privacy_policy.html">privacy policy</a></li>
+                            </ul>
+                        </li>
+      
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact us.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link common_btn" href="#">LEARN MORE</a>
+                        <a class="nav-link common_btn" href="https://pages.donately.com/calprepcollege/campaigns">DONATE</a>
                     </li>
                 </ul>
             </div>
@@ -126,11 +130,11 @@
                         </div>
                         <div class="tf__single_event_text">
                             <ul>
-                                <li><i class="far fa-map-marker-alt"></i> London,Dhaka</li>
+                                <li><i class="far fa-map-marker-alt"></i> California</li>
                                 <li><i class="far fa-clock"></i> 08.00 am - 10.00 am</li>
                             </ul>
-                            <a class="title" href="event_details.html">Outdoor This Games</a>
-                            <p>We can provide you with a reliable handyan in London you need to included the today..</p>
+                            <a class="title" href="event_details.html">Graduation Ceremony</a>
+                            <p>After all work, We Celebrate Achievements And Success</p>
                             <div class="tf__single_event_footer">
                                 <span>hasan mahmud</span>
                                 <span>$50.00</span>
@@ -142,15 +146,15 @@
                     <div class="tf__single_event">
                         <div class="tf__single_event_img">
                             <img src="images/event_img_2.jpg" alt="event" class="img-fluid w-100">
-                            <a class="event_category orange" href="#">Drawing</a>
+                            <a class="event_category orange" href="#">Public Lecture</a>
                         </div>
                         <div class="tf__single_event_text">
                             <ul>
-                                <li><i class="far fa-map-marker-alt"></i> London,Dhaka</li>
+                                <li><i class="far fa-map-marker-alt"></i> California College Theater</li>
                                 <li><i class="far fa-clock"></i> 08.00 am - 10.00 am</li>
                             </ul>
-                            <a class="title" href="event_details.html">Engineering Studies</a>
-                            <p>We can provide you with a reliable handyan in London you need to included the today..</p>
+                            <a class="title" href="event_details.html">Inaugural Lecture</a>
+                            <p>Theme:Artificial Intelligence Taking Over the Public Secto</p>
                             <div class="tf__single_event_footer">
                                 <span>tuhin imroz</span>
                                 <span>$99.00</span>
@@ -166,11 +170,11 @@
                         </div>
                         <div class="tf__single_event_text">
                             <ul>
-                                <li><i class="far fa-map-marker-alt"></i> London,Dhaka</li>
+                                <li><i class="far fa-map-marker-alt"></i>California college Stadium </li>
                                 <li><i class="far fa-clock"></i> 08.00 am - 10.00 am</li>
                             </ul>
-                            <a class="title" href="event_details.html">School Book Study</a>
-                            <p>We can provide you with a reliable handyan in London you need to included the today..</p>
+                            <a class="title" href="event_details.html">Sports Festival</a>
+                            <p>An Exciting Moment For Students to Exhibit their various Talents..</p>
                             <div class="tf__single_event_footer">
                                 <span>khalid hassan</span>
                                 <span>$549.00</span>
@@ -182,15 +186,15 @@
                     <div class="tf__single_event">
                         <div class="tf__single_event_img">
                             <img src="images/event_img_4.jpg" alt="event" class="img-fluid w-100">
-                            <a class="event_category green" href="#">sports</a>
+                            <a class="event_category green" href="#">Tech Fair</a>
                         </div>
                         <div class="tf__single_event_text">
                             <ul>
-                                <li><i class="far fa-map-marker-alt"></i> London,Dhaka</li>
+                                <li><i class="far fa-map-marker-alt"></i> California College ICT</li>
                                 <li><i class="far fa-clock"></i> 08.00 am - 10.00 am</li>
                             </ul>
-                            <a class="title" href="event_details.html">School Book Study</a>
-                            <p>We can provide you with a reliable handyan in London you need to included the today..</p>
+                            <a class="title" href="event_details.html">Engineering and Computing</a>
+                            <p>We Invite notable speakers and Investors</p>
                             <div class="tf__single_event_footer">
                                 <span>alamin ahmed</span>
                                 <span>$120.00</span>
@@ -202,15 +206,15 @@
                     <div class="tf__single_event">
                         <div class="tf__single_event_img">
                             <img src="images/event_img_5.jpg" alt="event" class="img-fluid w-100">
-                            <a class="event_category red" href="#">writing</a>
+                            <a class="event_category red" href="#">Community Outreach</a>
                         </div>
                         <div class="tf__single_event_text">
                             <ul>
-                                <li><i class="far fa-map-marker-alt"></i> London,Dhaka</li>
+                                <li><i class="far fa-map-marker-alt"></i> California College</li>
                                 <li><i class="far fa-clock"></i> 08.00 am - 10.00 am</li>
                             </ul>
-                            <a class="title" href="event_details.html">Engineering Studies</a>
-                            <p>We can provide you with a reliable handyan in London you need to included the today..</p>
+                            <a class="title" href="event_details.html">Social Development</a>
+                            <p>We Provide Care and Support to our Nearby community /p>
                             <div class="tf__single_event_footer">
                                 <span>aslam hossain</span>
                                 <span>$80.00</span>
@@ -222,43 +226,20 @@
                     <div class="tf__single_event">
                         <div class="tf__single_event_img">
                             <img src="images/event_img_6.jpg" alt="event" class="img-fluid w-100">
-                            <a class="event_category blue" href="#">school</a>
+                            <a class="event_category blue" href="#">Innovation</a>
                         </div>
                         <div class="tf__single_event_text">
                             <ul>
-                                <li><i class="far fa-map-marker-alt"></i> London,Dhaka</li>
+                                <li><i class="far fa-map-marker-alt"></i> California COllege</li>
                                 <li><i class="far fa-clock"></i> 08.00 am - 10.00 am</li>
                             </ul>
-                            <a class="title" href="event_details.html">Outdoor This Games</a>
-                            <p>We can provide you with a reliable handyan in London you need to included the today..</p>
+                            <a class="title" href="event_details.html">Computing Department</a>
+                            <p>We provide Knowledge for our students and provide solutions..</p>
                             <div class="tf__single_event_footer">
                                 <span>mahamud</span>
                                 <span>$80.00</span>
                             </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="tf__pagination mt_50">
-                <div class="row">
-                    <div class="col-12">
-                        <nav aria-label="Page navigation example">
-                            <ul class="pagination">
-                                <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Previous">
-                                        <i class="far fa-angle-left"></i>
-                                    </a>
-                                </li>
-                                <li class="page-item"><a class="page-link active" href="#">1</a></li>
-                                <li class="page-item"><a class="page-link" href="#">2</a></li>
-                                <li class="page-item"><a class="page-link" href="#">3</a></li>
-                                <li class="page-item">
-                                    <a class="page-link" href="#" aria-label="Next">
-                                        <i class="far fa-angle-right"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
                     </div>
                 </div>
             </div>
@@ -279,12 +260,11 @@
                     <div class="col-xl-3 col-sm-10 col-md-7 col-lg-6">
                         <div class="tf__footer_logo_area">
                             <a class="footer_logo" href="index.html">
-                                <img src="images/cpc_logo_basic2-copy-large-clear-bkgnd (1) (1).png" alt="CPC" class="img-fluid w-100">
+                                <img src="images/cpc_logo_basic2-copy-large-clear-bkgnd (1) (1).png" alt="Eduor" class="img-fluid w-100">
                             </a>
-                            <p>Nemo enim ipsam voluptate quia
-                                voluptas sit aspernatur aut odit
-                                aut fugit, sed quia magni this
-                                dolores eos qui ratione .</p>
+                            <p>CPC creates a learning environment for students that will propel them in their educational path
+                                 through small classroom sizes, individualized attention,
+                                  and safe and fun campus life activities.</p>
                             <ul class="d-flex flex-wrap">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
@@ -298,32 +278,38 @@
                         <div class="tf__footer_content xs_mt_50">
                             <h3>Quick Links</h3>
                             <ul>
-                                <li><a href="#">Best Services</a></li>
-                                <li><a href="#">Department</a></li>
-                                <li><a href="#">About Our Company</a></li>
-                                <li><a href="#">Business Contact</a></li>
-                                <li><a href="#">Make An Appointment</a></li>
+                                <li><a href="#">Programs</a></li>
+                                <li><a href="#">Academic Calendar</a></li>
+                                <li><a href="#"> Tuition & Fees</a></li>
+                                <li><a href="#"> Course Schedule</a></li>
+                                <li><a href="#"> Registrar and Transcripts</a></li>
+                                <li><a href="#">  CPC Website Privacy</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-xl-3 col-sm-10 col-md-7 col-lg-col-lg-6">
                         <div class="tf__footer_content xs_mt_30">
                             <h3>Our Contacts</h3>
-                            <p>Adress: 27 Division St, Berakuti, NY 121102, USA</p>
+                            <p>Adress: 245 E. Redlands Blvd. Ste. P, San Bernardino, CA 92408</p>
                             <p>
-                                <span> Phone: +8 1440 456 782</span>
-                                <span>Fax: +8 846512 456 788</span>
+                                <span>(909) 264-3255</span>
+                                <span>Text: 909-281-5953</span>
+                                <span>Please CALL or TEXT for an Appointment
+                                    Monday - Thursday 8:30am - 4:30pm
+                                    Friday 8:30am - 12:00pm</span>
                             </p>
                             <p>
-                                <span>Email: example@mail.com </span>
-                                <span>Website: yourwebsite.com</span>
+                                <span>Email:calprepcollege@gmail.com </span>
+                                <span>Website:info@calprepcollege.com</span>
                             </p>
                         </div>
                     </div>
                     <div class="col-xl-3 col-sm-10 col-md-5 col-lg-4 col-lg-5">
                         <div class="tf__footer_content xs_mt_45">
                             <h3>News Letter</h3>
-                            <p>Our approach to itis unique around know work an we know Get hands on the you like</p>
+                            <p>Summer Semester Registration is NOW OPEN! Please contact your Life Counselor by email to make plans for Summer Semester registration. 
+                                 Early registration discounts are available.  Summer Semester – Session I begins on Monday, May 15, 2023.
+                                We hope your Spring Semester is going smoothly.  Be sure to communicate with your professors or office staff should you need any assistance.</p>
                             <form>
                                 <input type="text" placeholder="Your Email">
                                 <button>send</button>
@@ -334,7 +320,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="tf__copyright">
-                            <p>Copyright ©Eduor all rights reserved.</p>
+                            <p>Copyright ©CPC all rights reserved.</p>
                             <ul class="d-flex flex-wrap">
                                 <li><a href="#">Privacy policy</a></li>
                                 <li><a href="#">About</a></li>
@@ -348,7 +334,6 @@
                      width="1024" height="768" style="border:0;" allowfullscreen="" loading="lazy"
                       referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </p>
-            </div>
         </div>
     </footer>
     <!--=================================
