--- a/about_us.html
+++ b/about_us.html
@@ -51,7 +51,7 @@
                                 <li><a href="accreditation.html">Accreditation</a></li>
                                 <li><a href="history.html">History</a></li>
                                 <li><a href="christain identity.html">Christain Identity</a></li>
-                                <li><a href="religion/non-discrimination.html">Religion/Non-discrimination</a></li>
+                                <li><a href="non-discrimination.html">Non-discrimination</a></li>
                                 <li><a href="service area.html">Service Area</a></li>
                                 <li><a href="contact us.html">Contact Us</a></li>
                             </ul>
@@ -60,8 +60,12 @@
                             <a class="nav-link" href="#">Academics <i class="far fa-angle-down"></i></a>
                             <ul class="tf__droap_menu">
                                 <li><a href="courses.html">Courses</a></li>
-                                <li><a href="courses_details.html">courses details</a></li>
-                                <li><a href="research.html">Research</a></li>
+                                <li><a href="courses_details.html">Courses details</a></li>
+                                <li><a href="Academic-Calendar-2023-2024.pdf">Academic Calendar</a></li>
+                                <li><a href="programs.html">Programs</a></li>
+                                <li><a href="Fall-2023-Schedule-UPDATED-1.pdf">Current Class Schedule</a></li>
+                                <li><a href="P.CPC-Catalog-2022.23.pdf">Catalog</a></li>
+                                <li><a href="learning.html">Student Learning Outcome</a></li>
                                 <li><a href="registry.html">Registry</a></li>
                             </ul>
                         </li>
@@ -69,7 +73,7 @@
                         <a class="nav-link" href="contact us.html">Contact US</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link common_btn" href="#">LEARN MORE</a>
+                        <a class="nav-link common_btn" href="https://pages.donately.com/calprepcollege/campaigns">DONATE</a>
                     </li>
                 </ul>
             </div>
@@ -262,7 +266,7 @@
                     <div class="col-xl-6 col-md-8 col-lg-6 m-auto wow fadeInUp" data-wow-duration="1.5s">
                         <div class="tf__heading_area mb_45">
                             <h5>OUR POPULAR COURSES</h5>
-                            <h2>Educational For Students Popular Courses.</h2>
+                            <h2>Unleash Your Potential and Elevate Your Learning!</h2>
                         </div>
                     </div>
                 </div>
@@ -603,10 +607,10 @@
                             <a class="footer_logo" href="index.html">
                                 <img src="images/cpc_logo_basic2-copy-large-clear-bkgnd (1) (1).png" alt="Eduor" class="img-fluid w-100">
                             </a>
-                            <p>Nemo enim ipsam voluptate quia
-                                voluptas sit aspernatur aut odit
-                                aut fugit, sed quia magni this
-                                dolores eos qui ratione .</p>
+                            <p>CPC creates a learning environment for students that will propel them 
+                                in their educational path through small classroom sizes, individualized attention, 
+                                and safe and fun campus life activities.
+                               </p>
                             <ul class="d-flex flex-wrap">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
@@ -649,7 +653,10 @@
                     <div class="col-xl-3 col-sm-10 col-md-5 col-lg-4 col-lg-5">
                         <div class="tf__footer_content xs_mt_45">
                             <h3>News Letter</h3>
-                            <p>Our approach to itis unique around know work an we know Get hands on the you like</p>
+                            <p>Summer Semester Registration is NOW OPEN! Please contact your Life Counselor by email to make plans for Summer Semester registration. 
+                                Early registration discounts are available.  Summer Semester – Session I begins on Monday, May 15, 2023.
+                               We hope your Spring Semester is going smoothly.  Be sure to communicate with your professors 
+                               or office staff should you need any assistance.</p>
                             <form>
                                 <input type="text" placeholder="Your Email">
                                 <button>send</button>
