--- a/courses.html
+++ b/courses.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
         content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densityDpi=device-dpi" />
 
-    <title>Eduor || Online Education Learning HTML Template</title>
+    <title>California Preparatory College | Colton, CA from Summer Medina on Vimeo</title>
 
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="css/all.min.css">
@@ -30,7 +30,7 @@
     <nav class="navbar navbar-expand-lg main_menu">
         <div class="container">
             <a class="navbar-brand" href="index.html">
-                <img src="images/cpc_logo_basic2-copy-large-clear-bkgnd (1) (1).png" alt="Eduor" class="img-fluid w-100">
+                <img src="images/cpc_logo_basic2-copy-large-clear-bkgnd (1) (1).png" alt="CPC" class="img-fluid w-100">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
                                 <li><a href="accreditation.html">Accreditation</a></li>
                                 <li><a href="history.html">History</a></li>
                                 <li><a href="christain identity.html">Christain Identity</a></li>
-                                <li><a href="religion/non-discrimination.html">Religion/Non-discrimination</a></li>
+                                <li><a href="non-discrimination.html">Non-discrimination</a></li>
                                 <li><a href="service area.html">Service Area</a></li>
                                 <li><a href="contact us.html">Contact Us</a></li>
                             </ul>
@@ -60,8 +60,12 @@
                         <a class="nav-link" href="#">Academics <i class="far fa-angle-down"></i></a>
                         <ul class="tf__droap_menu">
                             <li><a href="courses.html">Courses</a></li>
-                            <li><a href="courses_details.html">courses details</a></li>
-                            <li><a href="research.html">Research</a></li>
+                            <li><a href="courses_details.html">Courses details</a></li>
+                            <li><a href="Academic-Calendar-2023-2024.pdf">Academic Calendar</a></li>
+                            <li><a href="programs.html">Programs</a></li>
+                            <li><a href="Fall-2023-Schedule-UPDATED-1.pdf">Current Class Schedule</a></li>
+                            <li><a href="P.CPC-Catalog-2022.23.pdf">Catalog</a></li>
+                            <li><a href="learning.html">Student Learning Outcome</a></li>
                             <li><a href="registry.html">Registry</a></li>
                         </ul>
                     </li>
@@ -72,7 +76,7 @@
                         <a class="nav-link" href="contact us.html">Contact Us</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link common_btn" href="#">LEARN MORE</a>
+                        <a class="nav-link common_btn" href="https://pages.donately.com/calprepcollege/campaigns">DONATE</a>
                     </li>
                 </ul>
             </div>
@@ -114,7 +118,7 @@
                 <div class="col-xl-6 col-md-8 col-lg-6 m-auto">
                     <div class="tf__heading_area mb_15">
                         <h5>OUR POPULAR COURSES</h5>
-                        <h2>Educational For Students Popular Courses.</h2>
+                        <h2>Unleash Your Potential and Elevate Your Learning!</h2>
                     </div>
                 </div>
             </div>
@@ -313,10 +317,9 @@
                             <a class="footer_logo" href="index.html">
                                 <img src="images/cpc_logo_basic2-copy-large-clear-bkgnd (1) (1).png" alt="Eduor" class="img-fluid w-100">
                             </a>
-                            <p>Nemo enim ipsam voluptate quia
-                                voluptas sit aspernatur aut odit
-                                aut fugit, sed quia magni this
-                                dolores eos qui ratione .</p>
+                            <p>CPC creates a learning environment for students that will propel them in their educational path
+                                 through small classroom sizes, individualized attention,
+                                  and safe and fun campus life activities.</p>
                             <ul class="d-flex flex-wrap">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
@@ -330,32 +333,38 @@
                         <div class="tf__footer_content xs_mt_50">
                             <h3>Quick Links</h3>
                             <ul>
-                                <li><a href="#">Best Services</a></li>
-                                <li><a href="#">Department</a></li>
-                                <li><a href="#">About Our Company</a></li>
-                                <li><a href="#">Business Contact</a></li>
-                                <li><a href="#">Make An Appointment</a></li>
+                                <li><a href="#">Programs</a></li>
+                                <li><a href="#">Academic Calendar</a></li>
+                                <li><a href="#"> Tuition & Fees</a></li>
+                                <li><a href="#"> Course Schedule</a></li>
+                                <li><a href="#"> Registrar and Transcripts</a></li>
+                                <li><a href="#">  CPC Website Privacy</a></li>
                             </ul>
                         </div>
                     </div>
                     <div class="col-xl-3 col-sm-10 col-md-7 col-lg-col-lg-6">
                         <div class="tf__footer_content xs_mt_30">
                             <h3>Our Contacts</h3>
-                            <p>Adress: 27 Division St, Berakuti, NY 121102, USA</p>
+                            <p>Adress: 245 E. Redlands Blvd. Ste. P, San Bernardino, CA 92408</p>
                             <p>
-                                <span> Phone: +8 1440 456 782</span>
-                                <span>Fax: +8 846512 456 788</span>
+                                <span>(909) 264-3255</span>
+                                <span>Text: 909-281-5953</span>
+                                <span>Please CALL or TEXT for an Appointment
+                                    Monday - Thursday 8:30am - 4:30pm
+                                    Friday 8:30am - 12:00pm</span>
                             </p>
                             <p>
-                                <span>Email: example@mail.com </span>
-                                <span>Website: yourwebsite.com</span>
+                                <span>Email:calprepcollege@gmail.com </span>
+                                <span>Website:info@calprepcollege.com</span>
                             </p>
                         </div>
                     </div>
                     <div class="col-xl-3 col-sm-10 col-md-5 col-lg-4 col-lg-5">
                         <div class="tf__footer_content xs_mt_45">
                             <h3>News Letter</h3>
-                            <p>Our approach to itis unique around know work an we know Get hands on the you like</p>
+                            <p>Summer Semester Registration is NOW OPEN! Please contact your Life Counselor by email to make plans for Summer Semester registration. 
+                                 Early registration discounts are available.  Summer Semester – Session I begins on Monday, May 15, 2023.
+                                We hope your Spring Semester is going smoothly.  Be sure to communicate with your professors or office staff should you need any assistance.</p>
                             <form>
                                 <input type="text" placeholder="Your Email">
                                 <button>send</button>
@@ -366,7 +375,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="tf__copyright">
-                            <p>Copyright ©Eduor all rights reserved.</p>
+                            <p>Copyright ©CPC all rights reserved.</p>
                             <ul class="d-flex flex-wrap">
                                 <li><a href="#">Privacy policy</a></li>
                                 <li><a href="#">About</a></li>
@@ -380,7 +389,6 @@
                      width="1024" height="768" style="border:0;" allowfullscreen="" loading="lazy"
                       referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </p>
-            </div>
         </div>
     </footer>
     <!--=================================
